Finalise how to start the game